# octax

./: .gitignore  LICENSE  README.md  create_gifs.py  main.py  octax_logo.pixil  play.py  pyproject.toml  requirements.txt  requirements_envpool.txt  requirements_training.txt  test_sbx.py  train.py  training.py
ablations/: gpu_memory_profiler.py  measure_envpool.py  measure_time.py  metrics_utils.py  run_measure_time.sh
conf/: config.yaml  sweep.yaml
docs/: changelog.md  conf.py  contributing.md  faq.md  index.md  installation.md
examples/: demo_vmap.py  example.py  gymnasium_example.py  rendering_demo.py  sbx_ppo_example.py  train_brix_ppo.py  training_on_octax.py
exemples/: rendering_demo.py
octax/: __init__.py  constants.py  decode.py  emulator.py  env.py  gymnasium_wrapper.py  logging.py  main.py  rendering.py  stack.py  state.py  wrappers.py
roms/: Worm V4 [RB-Revival Studios, 2007].8o  Worm V4 [RB-Revival Studios, 2007].ch8  cavern.8o  cavern1.ch8  cavern2.ch8  cavern3.ch8  cavern4a.ch8  cavern4b.ch8  cavern5.ch8  cavern6.ch8  flightrunner.8o  flightrunner.ch8  flightrunner.o8  output.ch8  space_flight1.ch8  space_flight10.ch8  space_flight2.ch8  space_flight3.ch8  space_flight4.ch8  space_flight5.ch8  space_flight6.ch8  space_flight7.ch8  space_flight8.ch8  space_flight9.ch8  spacejam.8o  spacejam.ch8  target_shooter1.8o  target_shooter1.ch8  target_shooter2.8o  target_shooter2.ch8  target_shooter3.8o  target_shooter3.ch8
tests/: conftest.py  test_alu.py  test_control_flow.py  test_display.py  test_memory.py  test_misc.py  test_system.py
(+60 files in other folders)
