[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octax"
version = "0.1.0"
description = "Accelerated CHIP-8 Arcade RL Environments for JAX"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Waris Radji", email = "wradji64@gmail.com"}
]
keywords = ["reinforcement-learning", "chip-8", "emulator", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20", 
    "numpy>=1.24.0",
    "flax>=0.8.0",
]

[project.optional-dependencies]
gui = [
    "pygame>=2.5.0",
    "opencv-python>=4.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=3.0.0",
    "furo>=2024.0.0",
]
all = ["octax[gui,dev,docs]"]

[project.urls]
Repository = "https://github.com/riiswa/octax"
Documentation = "https://riiswa.github.io/octax/"
Homepage = "https://github.com/riiswa/octax"
Issues = "https://github.com/riiswa/octax/issues"

[tool.setuptools]
packages = ["octax"]

[tool.pytest.ini_options]
testpaths = ["tests"]